--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:background="@color/white"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F8FFF0"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_login"
-        android:background="@color/white"
+        android:background="#F8FFF0"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,14 +17,13 @@
 
         <ImageView
             android:id="@+id/iv_login_logo"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="120dp"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_name"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
             app:layout_constraintHorizontal_bias="0.58"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
             app:layout_constraintTop_toTopOf="@+id/gl_login_above_logo"
             app:srcCompat="@drawable/orangepaw" />
 
@@ -37,9 +37,9 @@
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_description"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
             app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />
 
         <TextView
@@ -51,9 +51,9 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
             app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_name" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="0dp"
-            app:layout_constraintGuide_percent="0.10" />
+            app:layout_constraintGuide_percent="0.15" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_login_right_of_image"
@@ -70,22 +70,26 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="0dp"
-            app:layout_constraintGuide_percent="0.90" />
+            app:layout_constraintGuide_percent="0.85" />
 
         <EditText
             android:id="@+id/et_login_emailaddress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:backgroundTint="@color/gray"
+            android:layout_marginTop="45dp"
+            android:background="@drawable/layout_border"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_email"
+            android:drawablePadding="16dp"
             android:ems="10"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
+            android:padding="8dp"
             android:textColor="@color/black"
             android:textColorHint="@color/gray"
             android:textCursorDrawable="@drawable/cursor_orange"
-            app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
             app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
             app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_description" />
 
@@ -94,14 +98,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:backgroundTint="@color/gray"
+            android:background="@drawable/layout_border"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_password"
+            android:drawablePadding="16dp"
             android:ems="10"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
+            android:padding="8dp"
             android:textColor="@color/black"
             android:textColorHint="@color/gray"
             android:textCursorDrawable="@drawable/cursor_orange"
-            app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
             app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
             app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
 
@@ -138,37 +147,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="0dp"
-            app:layout_constraintGuide_percent="0.10" />
+            app:layout_constraintGuide_percent="0.20" />
 
         <!--    TODO (2) Check the design if it looks better without this-->
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_login_left_icons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="0dp"
-            app:layout_constraintGuide_percent="0.80" />
-
-        <ImageView
-            android:id="@+id/iv_login_email_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toBottomOf="@+id/et_login_emailaddress"
-            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-            app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
-            app:srcCompat="@drawable/ic_email" />
-
-        <ImageView
-            android:id="@+id/iv_login_password_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
-            app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
-            app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
-            app:srcCompat="@drawable/ic_password" />
 
         <ProgressBar
             android:id="@+id/pb_login"
