--- a/app/src/main/res/layout/activity_post_register_user_details.xml
+++ b/app/src/main/res/layout/activity_post_register_user_details.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#F8FFF0"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="#F8FFF0"
         tools:context=".PostRegisterUserDetails">
 
         <EditText
