--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -7,7 +7,24 @@
     android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
     tools:context=".Activities.MatchesProfilePageActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logoarea"
         android:layout_width="0dp"
         android:layout_height="84dp"
@@ -158,6 +175,9 @@
         android:indeterminate="true"
         android:indeterminateDrawable="@drawable/my_progress_indeterminate"
         app:layout_constraintVertical_bias="0.79" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
