--- a/app/src/main/res/layout/circlebutton_layout.xml
+++ b/app/src/main/res/layout/circlebutton_layout.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed = "false">
         <shape android:shape = "oval">
             <stroke android:width="1dp" android:color="#919191" />
-            <solid android:color = "#ffffff"/>
+            <solid android:color = "@android:color/transparent"/>
         </shape>
     </item>
     <item android:state_pressed = "true">
