--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Switch
-            android:id="@+id/switch_incognito"
+            android:id="@+id/switch_theme"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginTop="6dp"
@@ -101,18 +101,22 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_location">
+        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_incognito">
 
-        <ImageView
-            android:id="@+id/iv_settings_next_notifications"
+        <Switch
+            android:id="@+id/switch_notifications"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:padding="0dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="4dp"
+            android:background="@null"
+            android:text=""
+            android:thumbTint="@color/white"
+            android:trackTint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_next_gray" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/tv_settings_notification"
@@ -148,7 +152,7 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_incognito">
+        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_notification">
 
         <TextView
             android:id="@+id/tv_settings_location_title"
@@ -182,8 +186,9 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/layout_border"
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_notification">
+        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_location">
 
         <TextView
             android:id="@+id/textView7"
