--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -184,4 +184,14 @@
         app:layout_constraintEnd_toStartOf="@id/guideline25"
         app:layout_constraintStart_toEndOf="@id/guideline24"
         app:layout_constraintTop_toBottomOf="@id/cl_chattop" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_chat"
+        android:layout_width="0dp"
+        android:layout_height="484dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/cl_chatbottom"
+        app:layout_constraintEnd_toStartOf="@+id/guideline25"
+        app:layout_constraintStart_toStartOf="@+id/guideline24"
+        app:layout_constraintTop_toBottomOf="@+id/cl_chattop" />
 </androidx.constraintlayout.widget.ConstraintLayout>
